# ff-controller-firmware

./: .gitignore  CMakeLists.txt  README.md
include/: config.h
ros/controller_driver/: CMakeLists.txt  package.xml
ros/controller_driver/launch/: controller_driver_launch.py
ros/controller_driver/src/: controller_driver_node.cpp
ros/controller_msgs/: CMakeLists.txt  package.xml
ros/controller_msgs/msg/: ControllerInput.msg  MotorCommand.msg
schematics/: carrier_board_1.kicad_pcb  carrier_board_1.kicad_prl  carrier_board_1.kicad_pro  carrier_board_1.kicad_sch
scripts/: build_and_test.sh  flash_pico.sh  ros2_launch.sh
src/: main.c
src/controller/: adc_reader.c  adc_reader.h  controller.c  controller.h  i2c_slave.c  i2c_slave.h  uart_motor.c  uart_motor.h
